--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "cthayes implementation in react",
   "main": "source/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
   },
   "author": "Christopher Hayes",
   "license": "ISC",
